Wallet dashboard alignment issues fixed.

--- a/stylesheets/_bchat.scss
+++ b/stylesheets/_bchat.scss
@@ -1607,7 +1607,7 @@ label {
     }
     &-myAddress-Box {
       display: flex;
-      justify-content: space-between;
+      // justify-content: space-between;
       align-items: center;
 
       &-content {
@@ -1638,7 +1638,7 @@ label {
         overflow: hidden;
         text-overflow: ellipsis;
         /* cursor: pointer; */
-        margin-right: 5px;
+        margin-right: 13px;
       }
 
       &-copyIcon-box {
@@ -1896,7 +1896,7 @@ label {
         }
         &-disClaimerBox {
           width: 86%;
-          padding-top: 12px;
+          // padding-top: 12px;
           padding-bottom: 25px;
           font-size: 13px;
           display: flex;
@@ -1947,7 +1947,7 @@ label {
             color: #fff;
           }
           &-copyBtn {
-            background-color: var(--color-walcancelBtn);
+            background-color: var(--color-walAddressBookCopy);
             margin-left: 10px;
           }
         }
@@ -1980,6 +1980,7 @@ label {
 
         &-disableText {
           color: #a1a1bc;
+          padding-right: 12px;
         }
         &-subtle {
           font-family: $bchat-font-poppin-semibold;
@@ -2138,6 +2139,10 @@ label {
             text-align: center;
             margin-top: 14px;
             font-size: 12px;
+           
+            .result {
+              font-family: 'poppin-semibold';
+            }
           }
           &-btnBox {
             .bchat-button.default.primary,
